fix for jdk8; use animation atlas and handle layout